# wagtail-typograf

./: LICENSE  README.rst  pyproject.toml
tests/: test_wagtail_typograf.py
wagtail_typograf/: handlers.py  urls.py  views.py  wagtail_hooks.py
wagtail_typograf/static/wagtail_typograf/js/: typograf.js
