[tool.poetry]
name = "wagtail-typograf"
version = "0.1.0"
description = "Brings russian typography to Wagtail rich text editor based on draftail"
authors = ["Sergey Trofimov <truetug@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/truetug/wagtail-typograf"
repository = "https://github.com/truetug/wagtail-typograf"
keywords = ["wagtail", "draftail", "typography", "typus"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Text Editors",
    "Topic :: Text Editors :: Text Processing",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
typus = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
